@@ -1,5 +1,12 @@
 2011-05-17  Colin Watson  <cjwatson@ubuntu.com>
 
+	* util/grub-fstest.c (cmd_cat): New function.
+	(fstest): Handle CMD_CAT.
+	(options): Add cat.
+	(argp_parser): Handle cat.
+
+2011-05-17  Colin Watson  <cjwatson@ubuntu.com>
+
 	* Makefile.util.def (grub-bin2h): Don't install.
 	* docs/man/grub-bin2h.h2m: Remove.
 
